[package]
name = "cronscope"
version = "0.1.0"
edition = "2021"
authors = ["Edgar Ortega Ramirez"]
description = "A comprehensive cron expression toolkit CLI — parse, validate, explain, compute run times, and detect schedule overlaps"
license = "MIT"
repository = "https://github.com/EdgarOrtegaRamirez/cronscope"
homepage = "https://github.com/EdgarOrtegaRamirez/cronscope"
documentation = "https://github.com/EdgarOrtegaRamirez/cronscope#readme"
readme = "README.md"
keywords = ["cron", "crontab", "schedule", "cli", "scheduler"]
categories = ["command-line-utilities", "date-and-time"]
exclude = ["/target", "/.github"]

[[bin]]
name = "cronscope"
path = "src/main.rs"

[lib]
name = "cronscope"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6", features = ["derive", "wrap_help"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
